# C_to_x86_64

./: .gitignore  CMakeLists.txt
include/ast/: ast.hpp  printer.hpp
include/lexer/: lexer.hpp  token.h  token.hpp  tokenize.hpp
include/parser/: parser.hpp
scripts/: run_tests.sh  run_unit_tests.sh
src/: main.cpp
src/ast/: printer.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
tests/: test_lexer.cpp  test_parser.cpp  test_sanity.cpp
